@@ -15,6 +15,7 @@ import java.nio.file.Path;
 import java.util.Arrays;
 import java.util.Calendar;
 import java.util.Collections;
+import java.util.Collection;
 import java.util.GregorianCalendar;
 import java.util.HashSet;
 import java.util.List;
@@ -45,7 +46,9 @@ import no.scopus.generated.MetaTp;
 import no.scopus.generated.OrigItemTp;
 import no.scopus.generated.ProcessInfo;
 import no.scopus.generated.PublishercopyrightTp;
+import no.scopus.generated.RichstringWithMMLType;
 import no.scopus.generated.ShortTitle;
+import no.scopus.generated.TitletextTp;
 import no.scopus.generated.YesnoAtt;
 import no.unit.nva.language.LanguageConstants;
 import nva.commons.core.ioutils.IoUtils;
@@ -78,6 +81,12 @@ public final class ScopusGenerator {
     public String toXml() {
         StringWriter xmlWriter = new StringWriter();
         JAXB.marshal(document, xmlWriter);
+        return xmlWriter.toString();
+    }
+
+    public static String toXml(RichstringWithMMLType serializable) {
+        StringWriter xmlWriter = new StringWriter();
+        JAXB.marshal(serializable, xmlWriter);
         return xmlWriter.toString();
     }
 
@@ -153,6 +162,7 @@ public final class ScopusGenerator {
         head.setCitationTitle(randomCitationTitle());
         head.setAbstracts(randomAbstracts());
         head.setCitationInfo(randomCitationInfo());
+
         return head;
     }
 
@@ -173,10 +183,39 @@ public final class ScopusGenerator {
         return CitationtypeAtt.AR;
     }
 
-    private static CitationtypeAtt randomCitationTypeAtt() {
-        List<CitationtypeAtt> citationTypeAttList = Arrays.asList(CitationtypeAtt.values());
+    private static CitationTypeTp randumUnsupportedCitationType() {
+        var citationType = new CitationTypeTp();
+        citationType.setCode(randomUnSupportedCitationTypeAtt());
+        return citationType;
+    }
+
+    private static CitationtypeAtt randomUnSupportedCitationTypeAtt() {
+        List<CitationtypeAtt> citationTypeAttList = List.of(CitationtypeAtt.AB, CitationtypeAtt.BK,
+                                                            CitationtypeAtt.BR, CitationtypeAtt.BZ,
+                                                            CitationtypeAtt.CB,
+                                                            CitationtypeAtt.CH, CitationtypeAtt.CP,
+                                                            CitationtypeAtt.CR, CitationtypeAtt.DI,
+                                                            CitationtypeAtt.DP, CitationtypeAtt.ED,
+                                                            CitationtypeAtt.ER, CitationtypeAtt.IP,
+                                                            CitationtypeAtt.LE, CitationtypeAtt.MM,
+                                                            CitationtypeAtt.NO, CitationtypeAtt.PA,
+                                                            CitationtypeAtt.PP, CitationtypeAtt.RE,
+                                                            CitationtypeAtt.RF, CitationtypeAtt.RP,
+                                                            CitationtypeAtt.SH, CitationtypeAtt.ST,
+                                                            CitationtypeAtt.TB, CitationtypeAtt.WP);
         Collections.shuffle(citationTypeAttList);
         return citationTypeAttList.stream().findFirst().get();
+    }
+
+    public void replaceSupportedCitationTypeWithUnsuportedCitationType() {
+        document
+            .getItem()
+            .getItem()
+            .getBibrecord()
+            .getHead()
+            .getCitationInfo()
+            .getCitationType()
+            .set(0, randumUnsupportedCitationType());
     }
 
     private static AuthorKeywordsTp randomAuthorKeywordsTp() {
@@ -232,7 +271,31 @@ public final class ScopusGenerator {
     private static CitationTitleTp randomCitationTitle() {
         var citationTitle = new CitationTitleTp();
         citationTitle.getShortTitle().addAll(randomShortTitles());
+        citationTitle.getTitletext().add(randomOriginalTitle());
+        citationTitle.getTitletext().addAll(randomNonOriginalTitles());
         return citationTitle;
+    }
+
+    private static Collection<? extends TitletextTp> randomNonOriginalTitles() {
+        return smallStream().map(ignored -> randomNonOriginalTitle()).collect(Collectors.toList());
+    }
+
+    private static TitletextTp randomOriginalTitle() {
+        return randomTitle(YesnoAtt.Y);
+    }
+
+    private static TitletextTp randomNonOriginalTitle() {
+        return randomTitle(YesnoAtt.N);
+    }
+
+    private static TitletextTp randomTitle(YesnoAtt n) {
+        var titleText = new TitletextTp();
+        titleText.setOriginal(n);
+        titleText.setLang(randomScopusLanguageCode());
+        titleText.setPerspective(randomString());
+        titleText.setLang(randomScopusLanguageCode());
+        titleText.getContent().addAll(randomSerializables());
+        return titleText;
     }
 
     private static List<ShortTitle> randomShortTitles() {
